// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`captures iterators before nested defaults can reassign them 1`] = `
"local _binding = iterator
local _value = { _binding() }
local _done = _value[1] == nil
if _done then
	_value = nil
end
local _binding_1 = _value
local first = _binding_1[1]
local value = _binding_1[2]
if value == nil then
	iterator = replacement
	local _ = iterator
	value = 99
end
local _value_1
if not _done then
	_value_1 = { _binding() }
	_done = _value_1[1] == nil
	if _done then
		_value_1 = nil
	end
end
local second = _value_1
local _rest = {}
if not _done then
	local _length = 0
	local _iterFunc = _binding
	while true do
		local _results = { _iterFunc() }
		if _results[1] == nil then
			break
		end
		_length += 1
		_rest[_length] = _results
	end
end
local rest = _rest
print(first, value, second, rest)
return nil
"
`;

exports[`captures reassignable iterators before preceding bindings 1`] = `
"local calls = 0
local iterator
iterator = (function()
	calls += 1
	iterator = (function()
		error("replacement iterator")
	end)
	return if calls <= 3 then calls else nil
end)
local _iterator = iterator
local _value = _iterator()
local _done = _value == nil
local first = _value
local _value_1
if not _done then
	_value_1 = _iterator()
	_done = _value_1 == nil
end
local second = _value_1
local _rest = {}
if not _done then
	local _length = 0
	for _result in _iterator do
		_length += 1
		_rest[_length] = _result
	end
end
local rest = _rest
print(first, second, rest)
return nil
"
`;

exports[`captures rest assignment targets before collecting LuaTuple<[number, string]> iterators 1`] = `
"local _binding = iterator
local _exp = target()
local _index = key() + 1
local _rest = {}
local _length = 0
local _iterFunc = _binding
while true do
	local _results = { _iterFunc() }
	if _results[1] == nil then
		break
	end
	_length += 1
	_rest[_length] = _results
end
_exp[_index] = _rest
return nil
"
`;

exports[`captures rest assignment targets before collecting number iterators 1`] = `
"local _binding = iterator
local _exp = target()
local _index = key() + 1
local _rest = {}
local _length = 0
for _result in _binding do
	_length += 1
	_rest[_length] = _result
end
_exp[_index] = _rest
return nil
"
`;

exports[`collects iterator rest bindings with fixed tuples after preceding elements 1`] = `
"local _value = { iterator() }
local _done = _value[1] == nil
if _done then
	_value = nil
end
local first = _value
if not _done then
	_done = iterator() == nil
end
local _rest = {}
if not _done then
	local _length = 0
	local _iterFunc = iterator
	while true do
		local _results = { _iterFunc() }
		if _results[1] == nil then
			break
		end
		_length += 1
		_rest[_length] = _results
	end
end
local rest = _rest
return {
	first = first,
	rest = rest,
}
"
`;

exports[`collects iterator rest bindings with single values after preceding elements 1`] = `
"local _value = iterator()
local _done = _value == nil
local first = _value
if not _done then
	_done = iterator() == nil
end
local _rest = {}
if not _done then
	local _length = 0
	for _result in iterator do
		_length += 1
		_rest[_length] = _result
	end
end
local rest = _rest
return {
	first = first,
	rest = rest,
}
"
`;

exports[`collects iterator rest bindings with variadic tuples after preceding elements 1`] = `
"local _value = { iterator() }
local _done = _value[1] == nil
if _done then
	_value = nil
end
local first = _value
if not _done then
	_done = iterator() == nil
end
local _rest = {}
if not _done then
	local _length = 0
	local _iterFunc = iterator
	while true do
		local _results = { _iterFunc() }
		if _results[1] == nil then
			break
		end
		_length += 1
		_rest[_length] = _results
	end
end
local rest = _rest
return {
	first = first,
	rest = rest,
}
"
`;

exports[`guards iterator assignment targets after exhaustion (LuaTuple<[number, string]>) 1`] = `
"local _binding = iterator
local _exp = target()
local _value = { _binding() }
local _done = _value[1] == nil
if _done then
	_value = nil
end
_exp.value = _value
if _exp.value == nil then
	_exp.value = { fallback() }
end
if not _done then
	_done = _binding() == nil
end
local _exp_1 = target()
local _rest = {}
if not _done then
	local _length = 0
	local _iterFunc = _binding
	while true do
		local _results = { _iterFunc() }
		if _results[1] == nil then
			break
		end
		_length += 1
		_rest[_length] = _results
	end
end
_exp_1.rest = _rest
return nil
"
`;

exports[`guards iterator assignment targets after exhaustion (number) 1`] = `
"local _binding = iterator
local _exp = target()
local _value = _binding()
local _done = _value == nil
_exp.value = _value
if _exp.value == nil then
	_exp.value = fallback()
end
if not _done then
	_done = _binding() == nil
end
local _exp_1 = target()
local _rest = {}
if not _done then
	local _length = 0
	for _result in _binding do
		_length += 1
		_rest[_length] = _result
	end
end
_exp_1.rest = _rest
return nil
"
`;
